--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Stetson Wendel">
     <meta name="description" content="Stetson Wendel's course assignment portal for WDD230 - Web Frontend Development">
+
+    <meta property="og:url" content="https://stetsonwendel.github.io/wdd230/" />
+    <meta property="og:title" content="Stetson Wendel's Homepage" />
+    <meta property="og:description" content="Web Development WDD230" />
+    <meta property="og:image" content="https://stetsonwendel.github.io/wdd230/images/link-photo.jpg" />
+    <meta property="og:type"  content="website" />
+
     <title>Stetson Wendel - WDD230 - Web Frontend Development</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/base.css">
     
 </head>
