Meta data update

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <meta property="og:image" content="https://stetsonwendel.github.io/wdd230/images/link-photo.jpg" />
     <meta property="og:type"  content="website" />
 
+
+
     <title>Stetson Wendel - WDD230 - Web Frontend Development</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/base.css">
     
 </head>
