--- a/index.html
+++ b/index.html
@@ -12,32 +12,28 @@
     <meta property="og:image" content="https://stetsonwendel.github.io/wdd230/images/link-photo.jpg" />
     <meta property="og:type"  content="website" />
 
-
-
     <title>Stetson Wendel - WDD230 - Web Frontend Development</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/base.css">
-    
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
-    <body>
-        <header>
-            <img src="images/profile-pic.png" alt="Stetson Wendel profile pic.">
-            <h1>Stetson Wendel</h1>
-        </header>
-    <nav>
-        <li><a href="#">Home</a></li>
-        <li><a href="chamber/" target="_blank">Chamber</a></li>
-        <li><a href="https://www.byui.edu" target="_blank">BYU-Idaho</a></li>
-        <li><a href="https://www.churchofjesuschrist.org/study/scriptures">Scripture</a></li>
-        <li><a href="chamber/siteplan.html">Site Plan</a></li>
+<body>
+    <header>
+        <img src="images/profile-pic.png" alt="Stetson Wendel profile pic.">
+        <h1>Stetson Wendel</h1>
+    </header>
+    <nav class="links">
+        <a href="#">Home</a>
+        <a href="chamber/" target="_blank">Chamber</a>
+        <a href="https://www.byui.edu" target="_blank">BYU-Idaho</a>
+        <a href="https://www.churchofjesuschrist.org/study/scriptures">Scripture</a>
+        <a href="chamber/siteplan.html">Site Plan</a>
     </nav>
     <main>
-        <h2>
-            WDD230: Web Frontend Development
-        </h2>
-        <section class = "card">
+        <h2>WDD230: Web Frontend Development</h2>
+        <section class = "card learning">
             <h3> Learning Activities</h3>
             <ul>
                 <li> <a href="">1: </a></li>
