--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </main>
     <footer>
         <p>
-            &copy
+            &copy;
             <span id="currentyear">2000</span> 
             Stetson Wendel
             USA
