--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             <h3> Learning Activities</h3>
             <ul>
                 <li> <a href="">1: </a></li>
+                <li> <a href="lesson02/design-principles.html">2:DesignPrinciplesDocument</a></li>
+                
             </ul>
         </section>
         <section class="card">
