--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -44,8 +44,8 @@
         <section class="sectionThree">
             <h2>Fitts Law</h2>
             <h3>Church of Jesus Christ of Latter Day Saints</h3>
-            <a href="https://www.deseretindustries.org/locations/rexburg-id"></a>
-            <img src="images/HicksLaw.png" alt="The Deseret Industries Website">
+            <a href="https://www.churchofjesuschrist.org/?lang=eng"></a>
+            <img src="images/FittsLaw.png" alt="Church of Jesus Christ Web Page">
             <p>
                 Fitts Law says that the time it takes to point to a target depends on its size and distance.
                 You would think this would be intuitive that if something is closer to you and takes up more
