--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -22,7 +22,7 @@
         <section class="sectionOne">
             <h2>Visual Hierarchy</h2>
             <h3>Brigham Young University Idaho</h3>
-            <a href="https://web.byui.edu/portal/student/"></a>
+            <a href="https://web.byui.edu/portal/student/">BYU-Idaho Student</a>
             <img src="images/VisualHierarchy.png" alt="The BYU-Idaho Student Homepage">
             <p>
                 Visual Hierarchy says things should be organized according to importance and that 
@@ -33,7 +33,7 @@
         <section class="sectionTwo">
             <h2>Hick's Law</h2>
             <h3>Deseret Industries</h3>
-            <a href="https://www.deseretindustries.org/locations/rexburg-id"></a>
+            <a href="https://www.deseretindustries.org/locations/rexburg-id">Deseret Industries</a>
             <img src="images/HicksLaw.png" alt="The Deseret Industries Website">
             <p>
                 Hick's Law has to do with the time it takes a person to make a decision. By having minimal
@@ -44,7 +44,7 @@
         <section class="sectionThree">
             <h2>Fitts Law</h2>
             <h3>Church of Jesus Christ of Latter Day Saints</h3>
-            <a href="https://www.churchofjesuschrist.org/?lang=eng"></a>
+            <a href="https://www.churchofjesuschrist.org/?lang=eng">Church of Jesus Christ</a>
             <img src="images/FittsLaw.png" alt="Church of Jesus Christ Web Page">
             <p>
                 Fitts Law says that the time it takes to point to a target depends on its size and distance.
