--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <ul>
                 <li> <a href="">1: </a></li>
                 <li> <a href="lesson02/design-principles.html">2:DesignPrinciplesDocument</a></li>
+                <li> <a href="lesson03/images/Screenshot 2023-09-28 211957.png">3:W3School Thing</a></li>
                 
             </ul>
         </section>
